// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GuideSteps > deve ajustar o rowGap conforme activeStep via snapshot 1`] = `
<div
  class="MuiStepper-root MuiStepper-vertical css-17v9wil-MuiStepper-root"
>
  <div
    class="MuiStep-root MuiStep-vertical css-enonti-MuiStep-root"
  >
    <span
      class="MuiStepLabel-root MuiStepLabel-vertical css-122jq7f-MuiStepLabel-root"
    >
      <span
        class="MuiStepLabel-iconContainer Mui-active css-1b2ju2j-MuiStepLabel-iconContainer"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiStepIcon-root Mui-active css-3hpdci-MuiSvgIcon-root-MuiStepIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <circle
            cx="12"
            cy="12"
            r="12"
          />
          <text
            class="MuiStepIcon-text css-1g86afo-MuiStepIcon-text"
            dominant-baseline="central"
            text-anchor="middle"
            x="12"
            y="12"
          >
            1
          </text>
        </svg>
      </span>
      <span
        class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
      >
        <span
          class="MuiStepLabel-label Mui-active css-12eb3rq-MuiStepLabel-label"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1bkd8o1-MuiTypography-root"
          >
            Step 1
          </p>
        </span>
      </span>
    </span>
  </div>
  <div
    class="MuiStep-root MuiStep-vertical css-enonti-MuiStep-root"
  >
    <span
      class="MuiStepLabel-root MuiStepLabel-vertical Mui-disabled css-122jq7f-MuiStepLabel-root"
    >
      <span
        class="MuiStepLabel-iconContainer Mui-disabled css-1b2ju2j-MuiStepLabel-iconContainer"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiStepIcon-root css-3hpdci-MuiSvgIcon-root-MuiStepIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <circle
            cx="12"
            cy="12"
            r="12"
          />
          <text
            class="MuiStepIcon-text css-1g86afo-MuiStepIcon-text"
            dominant-baseline="central"
            text-anchor="middle"
            x="12"
            y="12"
          >
            2
          </text>
        </svg>
      </span>
      <span
        class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
      >
        <span
          class="MuiStepLabel-label Mui-disabled css-12eb3rq-MuiStepLabel-label"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1bkd8o1-MuiTypography-root"
          >
            Step 2
          </p>
        </span>
      </span>
    </span>
  </div>
  <div
    class="MuiStep-root MuiStep-vertical css-enonti-MuiStep-root"
  >
    <span
      class="MuiStepLabel-root MuiStepLabel-vertical Mui-disabled css-122jq7f-MuiStepLabel-root"
    >
      <span
        class="MuiStepLabel-iconContainer Mui-disabled css-1b2ju2j-MuiStepLabel-iconContainer"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiStepIcon-root css-3hpdci-MuiSvgIcon-root-MuiStepIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <circle
            cx="12"
            cy="12"
            r="12"
          />
          <text
            class="MuiStepIcon-text css-1g86afo-MuiStepIcon-text"
            dominant-baseline="central"
            text-anchor="middle"
            x="12"
            y="12"
          >
            3
          </text>
        </svg>
      </span>
      <span
        class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
      >
        <span
          class="MuiStepLabel-label Mui-disabled css-12eb3rq-MuiStepLabel-label"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1bkd8o1-MuiTypography-root"
          >
            Step 3
          </p>
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`GuideSteps > deve ajustar o rowGap conforme activeStep via snapshot 2`] = `
<div
  class="MuiStepper-root MuiStepper-vertical css-1ovhxo9-MuiStepper-root"
>
  <div
    class="MuiStep-root MuiStep-vertical Mui-completed css-enonti-MuiStep-root"
  >
    <span
      class="MuiStepLabel-root MuiStepLabel-vertical css-122jq7f-MuiStepLabel-root"
    >
      <span
        class="MuiStepLabel-iconContainer Mui-completed css-1b2ju2j-MuiStepLabel-iconContainer"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiStepIcon-root Mui-completed css-3hpdci-MuiSvgIcon-root-MuiStepIcon-root"
          data-testid="CheckCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 0a12 12 0 1 0 0 24 12 12 0 0 0 0-24zm-2 17l-5-5 1.4-1.4 3.6 3.6 7.6-7.6L19 8l-9 9z"
          />
        </svg>
      </span>
      <span
        class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
      >
        <span
          class="MuiStepLabel-label Mui-completed css-12eb3rq-MuiStepLabel-label"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1bkd8o1-MuiTypography-root"
          >
            Step 1
          </p>
        </span>
      </span>
    </span>
  </div>
  <div
    class="MuiStep-root MuiStep-vertical css-enonti-MuiStep-root"
  >
    <span
      class="MuiStepLabel-root MuiStepLabel-vertical css-122jq7f-MuiStepLabel-root"
    >
      <span
        class="MuiStepLabel-iconContainer Mui-active css-1b2ju2j-MuiStepLabel-iconContainer"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiStepIcon-root Mui-active css-3hpdci-MuiSvgIcon-root-MuiStepIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <circle
            cx="12"
            cy="12"
            r="12"
          />
          <text
            class="MuiStepIcon-text css-1g86afo-MuiStepIcon-text"
            dominant-baseline="central"
            text-anchor="middle"
            x="12"
            y="12"
          >
            2
          </text>
        </svg>
      </span>
      <span
        class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
      >
        <span
          class="MuiStepLabel-label Mui-active css-12eb3rq-MuiStepLabel-label"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1bkd8o1-MuiTypography-root"
          >
            Step 2
          </p>
        </span>
      </span>
    </span>
  </div>
  <div
    class="MuiStep-root MuiStep-vertical css-enonti-MuiStep-root"
  >
    <span
      class="MuiStepLabel-root MuiStepLabel-vertical Mui-disabled css-122jq7f-MuiStepLabel-root"
    >
      <span
        class="MuiStepLabel-iconContainer Mui-disabled css-1b2ju2j-MuiStepLabel-iconContainer"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiStepIcon-root css-3hpdci-MuiSvgIcon-root-MuiStepIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <circle
            cx="12"
            cy="12"
            r="12"
          />
          <text
            class="MuiStepIcon-text css-1g86afo-MuiStepIcon-text"
            dominant-baseline="central"
            text-anchor="middle"
            x="12"
            y="12"
          >
            3
          </text>
        </svg>
      </span>
      <span
        class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
      >
        <span
          class="MuiStepLabel-label Mui-disabled css-12eb3rq-MuiStepLabel-label"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1bkd8o1-MuiTypography-root"
          >
            Step 3
          </p>
        </span>
      </span>
    </span>
  </div>
</div>
`;
